# boss

./: .env.example  .gitignore  README.md  SUBMISSION.md  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  repositories.py  schemas.py
app/agent/: llm_client.py  memory.py  prompts.py  runtime.py  summary.py  token_budget.py  trace.py
app/static/: app.js  index.html  style.css
app/tools/: calculator.py  registry.py  search.py  todo.py  weather.py
docs/: ai-development-log.md  demo-script.md  memory-design.md  prompts.md  system-design.md
tests/: test_calculator.py  test_llm_client.py  test_memory.py  test_repository.py  test_runtime.py  test_stream_api.py  test_summary.py  test_token_budget.py  test_tool_registry.py
