[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-agent"
version = "0.1.0"
description = "A minimal agent runtime built without an agent framework."
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.103.2",
    "pydantic==1.10.15",
    "uvicorn[standard]==0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
